# Common_cpp_Helpers

./: .gitignore  .hgignore  Setup_custom.py  __RepositoryId__
Libraries/C++/CommonCppHelpers/v1.0/: CommonHelpers.cmake
Libraries/C++/CommonCppHelpers/v1.0/CommonHelpers/: Copy.h  Move.h
Libraries/C++/CommonCppHelpers/v1.0/CommonHelpers/Details/boost_extract/: Readme.txt
Libraries/C++/CommonCppHelpers/v1.0/CommonHelpers/UnitTests/: CMakeLists.txt
Libraries/C++/CommonHelpers/v1.0/: CppHelpers.doxygen
Libraries/C++/CommonHelpers/v1.0/CommonHelpers/: Compare.h  Constructor.h  Copy.h  Finally.h  Misc.h  Move.h  SharedObject.h  Stl.h  TestHelpers.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeCounter.h  ThreadSafeQueue.h  TypeTraits.h
Libraries/C++/CommonHelpers/v1.0/CommonHelpers/Details/: PreprocessorObjectFunctionalityImpl.h  TypeTraits.Details.h
Libraries/C++/CommonHelpers/v1.0/CommonHelpers/Details/boost_extract/preprocessor/: arithmetic.hpp  array.hpp  assert_msg.hpp  cat.hpp  comma.hpp  comma_if.hpp  comparison.hpp  control.hpp  debug.hpp  dec.hpp  empty.hpp  enum.hpp  enum_params.hpp  enum_params_with_a_default.hpp  enum_params_with_defaults.hpp  enum_shifted.hpp  enum_shifted_params.hpp  expand.hpp  expr_if.hpp  facilities.hpp  for.hpp  identity.hpp  if.hpp  inc.hpp  iterate.hpp  iteration.hpp  library.hpp  limits.hpp  list.hpp  logical.hpp  max.hpp  min.hpp  punctuation.hpp  repeat.hpp  repeat_2nd.hpp  repeat_3rd.hpp  repeat_from_to.hpp  repeat_from_to_2nd.hpp  repeat_from_to_3rd.hpp  repetition.hpp  (+8 more)
Libraries/C++/CommonHelpers/v1.0/CommonHelpers/Details/boost_extract/vmd/: array.hpp  assert.hpp  (+37 more)
Libraries/C++/CommonHelpers/v1.0/CommonHelpers/UnitTests/: CMakeLists.txt  Compare_UnitTest.cpp  Constructor_UnitTest.cpp  Copy_UnitTest.cpp  Finally_UnitTest.cpp  Misc_UnitTest.cpp  Move_UnitTest.cpp  SharedObject_UnitTest.cpp  Stl_UnitTest.cpp  TestHelpers_UnitTest.cpp  ThreadPool_UnitTest.cpp  ThreadSafeCounter_UnitTest.cpp  ThreadSafeQueue_UnitTest.cpp  TypeTraits_UnitTest.cpp  code_coverage.yaml
Libraries/C++/CommonHelpers/v1.0/CommonHelpers/cmake/: CommonHelpers.cmake
Libraries/cmake/CommonHelpers/v1.0/: CommonHelpers.cmake
(+311 files in other folders)
